Sonar fix ups